# CBacka

untitled/: AutoPlayer.cpp  AutoPlayer.h  BGame.cpp  BGame.h  BoardArray.cpp  BoardArray.h  Brain.cpp  Brain.h  CMakeLists.txt  ColorManagement.cpp  ColorManagement.h  Game.cpp  Game.h  Move.cpp  Move.h  NeuralNetwork.cpp  NeuralNetwork.h  Play.cpp  Play.h  Player.cpp  Player.h  RandomBrain.h  RuleBook.cpp  RuleBook.h  main.cpp
untitled1/: main.cpp
